--- a/css/exercice.css
+++ b/css/exercice.css
@@ -11,6 +11,11 @@
 
 
 /* 3. exercice-justify-2 */
+.exercice-justify-2 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 
 /* 4. exercice-justify-3 */
