--- a/css/exercice.css
+++ b/css/exercice.css
@@ -33,6 +33,11 @@
 
 
 /* 6. exercice-align-2 */
+.exercice-align-2 .container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
 
 
 /* 7. exercice-align-3 */
