--- a/css/exercice.css
+++ b/css/exercice.css
@@ -57,4 +57,10 @@
 
 
 /* 9. exercice-all-2 */
+.exercice-all-2 .container { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
